# simple_json_library

./: .clang-format  CMakeLists.txt  README.md
include/: simple_json.h
src/: simple_json.cpp
tests/: CMakeLists.txt  main.cpp  sample.json  tests.cpp
